rocket-chat-mongo-db-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: rocket-chat-mongo-db-svc
spec:
  type: ClusterIP
  ports:
  - port: 27017
    targetPort: 27017
  selector:
    app: rocket-chat-mongo-db
