rocket-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: rocket-chat-server
spec:
  selector:
    app: rocket-chat-server
  ports:
    - name: http
      port: 3000
      targetPort: 3000
